# sfos

./: .gitignore  README.md  sfos.cabal
example/: simple.sfos
repl/: Main.hs
src/: Sfos.hs
src/Sfos/: Error.hs  Evaluation.hs  Kinding.hs  Parser.hs  Show.hs  Support.hs  Syntax.hs  Typing.hs
tools/: check-format  format
